--- a/src/index.css
+++ b/src/index.css
@@ -1,154 +1,128 @@
-
-#root{
-    font-family: system-ui;
+#root {
+  font-family: system-ui;
 }
 
-
-.icon-song{
-    border-radius: 100%;
-    
+.icon-song {
+  border-radius: 100%;
 }
 
-.container-card-info{
-    width: 100px;
-    
+.container-card-info {
+  width: 100px;
 }
 
-.container-all-info-cards{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
+.container-all-info-cards {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.artist-container{
-    display: flex;
-    justify-content: center;
-    
-    
+.artist-container {
+  display: flex;
+  justify-content: center;
 }
 
-.paragraph-artist{
-    color: grey;
-  
-    
+.paragraph-artist {
+  color: grey;
 }
 
-
-
-.shadow-song-container{
-
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    padding: 0 40px;
-    box-shadow: -2px 5px 4px 2px rgba(221, 221, 221, 0.3), 2px 5px 4px 2px rgba(221, 221, 221, 0.3), 0px 5px 4px 2px rgba(221, 221, 221, 0.3);
-   
-    
-    
+.shadow-song-container {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  padding: 0 40px;
+  box-shadow: -2px 5px 4px 2px rgba(221, 221, 221, 0.3),
+    2px 5px 4px 2px rgba(221, 221, 221, 0.3),
+    0px 5px 4px 2px rgba(221, 221, 221, 0.3);
 }
 
-
-.image-song-container{
-    display: flex;
-    justify-content: center;
-    
+.image-song-container {
+  display: flex;
+  justify-content: center;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.title-container{
-    display: flex;
-    justify-content: center;
-    margin-left: 40px;
-    
-    
+.title-container {
+  display: flex;
+  justify-content: center;
+  margin-left: 40px;
 }
 
-.header-link-loading{
-    display: flex;
-    box-shadow: -2px 5px 4px 2px rgb(221 221 221 / 30%), 2px 5px 4px 2px rgb(221 221 221 / 30%), 0px 5px 4px 2px rgb(221 221 221 / 30%);
-    align-items: center;
+.header-link-loading {
+  display: flex;
+  box-shadow: -2px 5px 4px 2px rgb(221 221 221 / 30%),
+    2px 5px 4px 2px rgb(221 221 221 / 30%),
+    0px 5px 4px 2px rgb(221 221 221 / 30%);
+  align-items: center;
 }
 
-.loading-header{
-    margin-right: 50px;
+.loading-header {
+  margin-right: 50px;
 }
 
+.podcast-title {
+  width: 77rem;
+  color: rgb(34, 182, 250);
+  font-size: 30px;
 
-.podcast-title{
-    width:77rem;
-    color: rgb(34, 182, 250);
-    font-size: 30px;
-    
-    padding: 5px 0 10px 50px;
-   
-    
+  padding: 5px 0 10px 50px;
 }
 
-.texfield-end{
-    display: flex;
-    justify-content: end;
-    margin-right: 70px;
-    width: 80rem;
-    
+.texfield-end {
+  display: flex;
+  justify-content: end;
+  margin-right: 70px;
+  width: 80rem;
 }
 
-.links-songs{
-    text-decoration: none;
-    color:black;
-    margin: 20px
+.links-songs {
+  text-decoration: none;
+  color: black;
+  margin: 20px;
 }
 
-.podcast-link{
-    text-decoration: none;
-    color:rgb(98, 135, 238)
+.podcast-link {
+  text-decoration: none;
+  color: rgb(98, 135, 238);
 }
 
+.search-input:focus {
+  border-color: #0077ff;
+}
 
+.circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #87d1db;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 30px;
+  position: relative;
+  animation: breathe 3s infinite alternate ease-in-out;
+}
 
+.inner-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #0496da;
+}
 
-
-
-  .search-input:focus {
-    border-color: #0077FF;
+@keyframes breathe {
+  0% {
+    transform: scale(1);
   }
-
-  .circle {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #87d1db;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 30px;
-    position: relative;
-    animation: breathe 3s infinite alternate ease-in-out;
+  50% {
+    transform: scale(1.5);
   }
-  
-  .inner-circle {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #0496da;
+  100% {
+    transform: scale(1);
   }
-  
-  @keyframes breathe {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.5);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  
+}
